force-app/main/default/objects/Product2/fields/Available_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Available_Inventory__c</fullName>
    <formula>Total_Inventory__c -  Inventory_Out__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Inventory</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>