force-app/main/default/objects/Product2/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Install &gt;&gt; Services</fullName>
            </value>
            <value>
                <fullName>Operate &gt;&gt; Services</fullName>
            </value>
            <value>
                <fullName>Optimize &gt;&gt; Services</fullName>
            </value>
            <value>
                <fullName>Plan &gt;&gt; Services</fullName>
            </value>
            <value>
                <fullName>Product Based Services &gt;&gt; Services</fullName>
            </value>
            <value>
                <fullName>Professional Services &gt;&gt; Services</fullName>
            </value>
            <value>
                <fullName>Renew &gt;&gt; Services</fullName>
            </value>
            <value>
                <fullName>3-Phase Inverter over 100kw &gt;&gt; Solar Inverter</fullName>
            </value>
            <value>
                <fullName>Air Economizers &gt;&gt; Cooling</fullName>
            </value>
            <value>
                <fullName>AV Power Conditioners with Battery &gt;&gt; Audio-Video Solutions</fullName>
            </value>
            <value>
                <fullName>Business Continuity Software &gt;&gt; Data Center Infrastructure Management (DCIM) Software</fullName>
            </value>
            <value>
                <fullName>Bypass Panels &gt;&gt; Uninterruptible Power Supply (UPS)</fullName>
            </value>
            <value>
                <fullName>Close Coupled Air Conditioners &gt;&gt; Cooling</fullName>
            </value>
            <value>
                <fullName>Computer Cables and Devices &gt;&gt; Networking and Cable Solutions</fullName>
            </value>
            <value>
                <fullName>Containment and Air Distribution &gt;&gt; Cooling</fullName>
            </value>
            <value>
                <fullName>Cooling Distribution and Piping &gt;&gt; Cooling</fullName>
            </value>
            <value>
                <fullName>Cooling Modules &gt;&gt; Prefabricated Data Center Modules</fullName>
            </value>
            <value>
                <fullName>Data Center and Facility 3 Phase UPS &gt;&gt; Uninterruptible Power Supply (UPS)</fullName>
            </value>
            <value>
                <fullName>Data Center Containment &gt;&gt; Racks and Accessories</fullName>
            </value>
            <value>
                <fullName>DC Battery Systems &gt;&gt; DC Systems</fullName>
            </value>
            <value>
                <fullName>DC Distribution Systems &gt;&gt; DC Systems</fullName>
            </value>
            <value>
                <fullName>DC Integrated Power Systems &gt;&gt; DC Systems</fullName>
            </value>
            <value>
                <fullName>DC Power Systems &gt;&gt; DC Systems</fullName>
            </value>
            <value>
                <fullName>DC Rack Mounted Rectifier Subsystems &gt;&gt; DC Systems</fullName>
            </value>
            <value>
                <fullName>Filters &amp; Harmonic Conditioners &gt;&gt; Surge Protection and Power Conditioning</fullName>
            </value>
            <value>
                <fullName>Home &amp; Office Electronics &gt;&gt; Uninterruptible Power Supply (UPS)</fullName>
            </value>
            <value>
                <fullName>Home UPS &gt;&gt; Uninterruptible Power Supply (UPS)</fullName>
            </value>
            <value>
                <fullName>Industrial UPS &gt;&gt; Uninterruptible Power Supply (UPS)</fullName>
            </value>
            <value>
                <fullName>InfraStruXure Power Generation &gt;&gt; Power Generation</fullName>
            </value>
            <value>
                <fullName>IT Modules &gt;&gt; Prefabricated Data Center Modules</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>