force-app/main/default/objects/Product2/fields/Deployment_Note__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Note__c</fullName>
    <label>Deployment Note</label>
    <length>35</length>
    <type>Text</type>
</CustomField>