force-app/main/default/objects/Product2/fields/Inventory_Out__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Out__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Inventory Out</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>