force-app/main/default/objects/Product2/fields/Make__c.field-meta.xml
<CustomField>
    <fullName>Make__c</fullName>
    <label>Make</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AVTRON</fullName>
            </value>
            <value>
                <fullName>SIMPLEX</fullName>
            </value>
            <value>
                <fullName>CRESTCHIC</fullName>
            </value>
            <value>
                <fullName>LOADTEC</fullName>
            </value>
            <value>
                <fullName>PLASTIC CRATE</fullName>
            </value>
            <value>
                <fullName>CABLE</fullName>
            </value>
            <value>
                <fullName>COOPER</fullName>
            </value>
            <value>
                <fullName>CROMPTON</fullName>
            </value>
            <value>
                <fullName>SPARE PARTS</fullName>
            </value>
            <value>
                <fullName>PLATE 8589 3K</fullName>
            </value>
            <value>
                <fullName>RENTALOAD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>