force-app/main/default/objects/Product2/fields/Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer__c</fullName>
    <label>Manufacturer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Avtron</fullName>
            </value>
            <value>
                <fullName>Engineering/Design Feel</fullName>
            </value>
            <value>
                <fullName>Fundamental Power Solutions</fullName>
            </value>
            <value>
                <fullName>Hitachi</fullName>
            </value>
            <value>
                <fullName>I-Gard</fullName>
            </value>
            <value>
                <fullName>Powell</fullName>
            </value>
            <value>
                <fullName>Rex Power Magnetics</fullName>
            </value>
            <value>
                <fullName>Schneider Electric</fullName>
            </value>
            <value>
                <fullName>Sprecher + Schuh</fullName>
            </value>
            <value>
                <fullName>Arbutus West Agency Ltd</fullName>
            </value>
            <value>
                <fullName>Rental</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>