force-app/main/default/objects/Product2/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <label>Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>170SHT-122</fullName>
            </value>
            <value>
                <fullName>170SHT-152</fullName>
            </value>
            <value>
                <fullName>8SHT-601</fullName>
            </value>
            <value>
                <fullName>8SHT-801</fullName>
            </value>
            <value>
                <fullName>CR0.7-480</fullName>
            </value>
            <value>
                <fullName>CR1.0-480</fullName>
            </value>
            <value>
                <fullName>E1016-575</fullName>
            </value>
            <value>
                <fullName>K575A-600</fullName>
            </value>
            <value>
                <fullName>K675A-600</fullName>
            </value>
            <value>
                <fullName>KCS100</fullName>
            </value>
            <value>
                <fullName>LPC-100C</fullName>
            </value>
            <value>
                <fullName>LPH-400</fullName>
            </value>
            <value>
                <fullName>LPH100-600</fullName>
            </value>
            <value>
                <fullName>MARS-1000-600</fullName>
            </value>
            <value>
                <fullName>NORTHSTAR</fullName>
            </value>
            <value>
                <fullName>OLP6-2020-600</fullName>
            </value>
            <value>
                <fullName>XE189-100</fullName>
            </value>
            <value>
                <fullName>XE191-255</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>