force-app/main/default/objects/Product2/fields/Month_28_DAY__c.field-meta.xml
<CustomField>
    <fullName>Month_28_DAY__c</fullName>
    <label>Monthly Rate (28-DAY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>