force-app/main/default/objects/Product2/fields/Product2ID__c.field-meta.xml
<CustomField>
    <fullName>Product2ID__c</fullName>
    <formula>Id</formula>
    <label>Product2ID</label>
    <type>Text</type>
</CustomField>