force-app/main/default/objects/Product2/fields/Quickbooks_ID__c.field-meta.xml
<CustomField>
    <fullName>Quickbooks_ID__c</fullName>
    <externalId>true</externalId>
    <label>Quickbooks ID</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>