force-app/main/default/objects/Product2/fields/Shipping_Dimensions__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Dimensions__c</fullName>
    <label>Shipping Dimensions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>