force-app/main/default/objects/Product2/fields/Shipping_Weight__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Weight__c</fullName>
    <label>Shipping Weight</label>
    <length>255</length>
    <type>Text</type>
</CustomField>