force-app/main/default/objects/Product2/fields/Starting_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Starting_Inventory__c</fullName>
    <label>Starting Inventory</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>