force-app/main/default/objects/Product2/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <label>Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Solar Inverter</fullName>
            </value>
            <value>
                <fullName>Cooling</fullName>
            </value>
            <value>
                <fullName>Audio-Video Solutions</fullName>
            </value>
            <value>
                <fullName>Data Center Infrastructure Management (DCIM) Software</fullName>
            </value>
            <value>
                <fullName>Uninterruptible Power Supply (UPS)</fullName>
            </value>
            <value>
                <fullName>Networking and Cable Solutions</fullName>
            </value>
            <value>
                <fullName>Prefabricated Data Center Modules</fullName>
            </value>
            <value>
                <fullName>Racks and Accessories</fullName>
            </value>
            <value>
                <fullName>DC Systems</fullName>
            </value>
            <value>
                <fullName>Surge Protection and Power Conditioning</fullName>
            </value>
            <value>
                <fullName>Power Generation</fullName>
            </value>
            <value>
                <fullName>Data Centers and Server Rooms and Network Closets</fullName>
            </value>
            <value>
                <fullName>Portable Power Station</fullName>
            </value>
            <value>
                <fullName>Power Distribution</fullName>
            </value>
            <value>
                <fullName>Motor &amp; Drives</fullName>
            </value>
            <value>
                <fullName>Security and Environmental Monitoring</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
                <isActive>false</isActive>
                <label>Service</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>