force-app/main/default/objects/Product2/fields/Subscription_Type_Formula__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Type_Formula__c</fullName>
    <formula>TEXT(SBQQ__SubscriptionType__c)</formula>
    <label>Subscription Type</label>
    <type>Text</type>
</CustomField>