force-app/main/default/objects/Product2/fields/Week_7_DAY__c.field-meta.xml
<CustomField>
    <fullName>Week_7_DAY__c</fullName>
    <label>Weekly Rate (7-DAY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>