force-app/main/default/objects/Product2/recordTypes/Arbutus_Products.recordType-meta.xml
<RecordType>
    <fullName>Arbutus_Products</fullName>
    <active>true</active>
    <description>The Arbutus Products record type is restricted to the Arbutus Group business unit and system administrators.</description>
    <label>Arbutus Products</label>
</RecordType>