force-app/main/default/objects/Product2/recordTypes/Fundamental_Products.recordType-meta.xml
<RecordType>
    <fullName>Fundamental_Products</fullName>
    <active>true</active>
    <description>The Fundamental Products record type is restricted to the Arbutus Group business unit and system administrators.</description>
    <label>Fundamental Products</label>
</RecordType>