force-app/main/default/objects/Product2/listViews/Arbutus.listView-meta.xml
<ListView>
    <fullName>Arbutus</fullName>
    <columns>Manufacturer__c</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>Part_Number__c</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>SBQQ__PriceEditable__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>notContain</operation>
        <value>Rental The Re-Rental Class,Rental Load Bank Manual,Rental Load Bank Auto,Rental Accessories,Rental Parts,Rental Trailer</value>
    </filters>
    <filters>
        <field>PRODUCT2.RECORD_TYPE</field>
        <operation>equals</operation>
        <value>Product2.Arbutus_Products</value>
    </filters>
    <filters>
        <field>Manufacturer__c</field>
        <operation>equals</operation>
        <value>Arbutus West Agency Ltd</value>
    </filters>
    <label>Arbutus</label>
</ListView>