force-app/main/default/objects/Product2/listViews/Fundamental1.listView-meta.xml
<ListView>
    <fullName>Fundamental1</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Notes_Auto_Fill__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.RECORD_TYPE</field>
        <operation>equals</operation>
        <value>Product2.Fundamental_Products</value>
    </filters>
    <label>Fundamental</label>
</ListView>